Fixes misaligned text in results toolbar

--- a/app/assets/stylesheets/modules/sort-and-per-page-toolbar.css.scss
+++ b/app/assets/stylesheets/modules/sort-and-per-page-toolbar.css.scss
@@ -21,6 +21,7 @@
 
   .page_entries {
     text-transform: none;
+    vertical-align: middle;
   }
 
   .navbar-collapse {
